# TypeAgent

./: README.md  agent.py  config.py  constants.py  credentials.py  data_types.py  embeddings.py  interface.py  log.py  main.py  memory.py  migrate.py  persistence_manager.py  pyproject.toml  requirements.txt  streaming_interface.py  system.py  utils.py
agent_store/: storage.py
agent_store/vectorsdb/: chroma.py  lancedb.py  qdrant.py
autogen/: memgpt_agent.py
autogen/examples/: agent_autoreply.py
cli/: cli_config.py
data_sources/: connectors.py
data_sources/text_splitters/: basetextsplitter.py
llm_api/: cohere.py  google_ai.py  openai.py
local_llm/: constants.py  function_parser.py  json_parser.py
local_llm/grammars/: gbnf_grammar_generator.py
local_llm/llamacpp/: api.py
local_llm/llm_chat_completion_wrappers/: simple_summary_wrapper.py
local_llm/lmstudio/: settings.py
local_llm/ollama/: api.py
local_llm/settings/: deterministic_mirostat.py  settings.py
local_llm/vllm/: api.py
local_llm/webui/: api.py
luann/: constants.py  credentials.py  interface.py  main.py  memory.py  metadata.py  openapi.json  openapi_assistants.json  settings.py  system.py  utils.py
luann/autogen/: interface.py
luann/cli/: cli.py  cli_load.py
luann/data_sources/: directory.py  unstructured.py
luann/functions/: functions.py  schema_generator.py
luann/llm_api/: anthropic.py  azure_openai.py  llm_api_tools.py  openai.py
luann/presets/: utils.py  (+1 more)
models/: openai.py
openai_backcompat/: openai_object.py
prompts/: gpt_system.py
typeagent_client/: admin.py
(+52 files in other folders)
