[tool.poetry]
name = "luann"
version = "0.1.0"
description = "Create LLM agents with long-term memory and custom tools"
authors = ["Elliot <jiangqiulong68@163.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^2.0.1"
typer = "^0.12.5"
tqdm = "^4.66.6"
sqlalchemy = "^2.0.36"
sqlalchemy-json = "^0.7.0"
numpy = "^2.1.3"
pydantic = "^2.9.2"
demjson3 = "^3.0.6"
pytz = "^2024.2"
tiktoken = "^0.8.0"
pydantic-settings = "^2.6.1"
httpx = "^0.27.2"
httpx-sse = "^0.4.0"
docstring-parser = "^0.16"
sqlalchemy-utils = "^0.41.2"
sqlmodel = "^0.0.22"
openai = "^1.53.0"
langchain-core = "^0.3.15"
prettytable = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
